static/css/base.css
html {
    height: 100%;
    scroll-behavior: smooth;
}

body {
    font-family: 'Red Hat Mono', monospace;
    padding-top: 364px;
    height: 100%;
}

.main-padding {
    padding-top: 130px;
}

.home-padding {
    padding-top: 0px !important;
}

/* Credit -> https://css-tricks.com/a-clever-sticky-footer-technique/ */
body > footer {
    position: sticky;
    top: 100vh;
}

/* ------------------ Navigation Bar and Index */

.index-bg {
    background: url('/media/homepage-image.jpg') no-repeat center center fixed;
    background-size: cover;
    background-attachment: scroll;
    height: calc(100vh - 164px);
}

.index-bg-2 {
    background-color: rgba(111, 29, 27, 0.8);
    max-width: 25%;
    border-radius: 10px;
}

.text-white {
    color: #C8C8C8 !important;
}

.main-bg {
    background-color: #6F1D1B;
}

.nav-bg {
    background-color: #6F1D1B;
    margin-right: 1.5em;
    padding: 0.5em;
}

.yellow-bg {
    background-color: #866209;
}

.logo {
    width: 50%;
}

/* ------------------- Footer */

.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    margin-top: 260px;
}

.copyright {
    font-size: x-small;
}

.schedule {
    font-size: smaller;
}

/* ------------------ Body */

.ft-sm {
    font-size: 14px !important;
    font-family: 'Lato', sans-serif !important;
}

.ft-md {
    font-size: 16px !important;
}

.img-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* ------------------ Cards */

.card-img-top {
    width: 100%;
    height: auto;
    object-fit: cover;
}

.card {
    border-color:#CF3C3A;
    border-width: 0.30rem;
}

/* ------------------ Buttons */

.btt {
    cursor: pointer;
    background-color: #343a40 !important;
    color: whitesmoke !important;
    text-align: center;
    padding: 2px 7px;
    text-decoration: none;
    border-radius: 8px;
    border: 2px solid whitesmoke !important;
    display: inline-block;
}

.btt:hover,
.btt:active {
    background-color: whitesmoke !important;
    color: #343a40 !important;
    border: 2px solid #343a40 !important;
    text-decoration: none;
}

.btt-index {
    cursor: pointer;
    background-color: rgba(111, 29, 27, 0.1) !important;
    color: whitesmoke !important;
    text-align: center;
    padding: 2px 7px;
    text-decoration: none;
    border-radius: 4px;
    border: 2px solid whitesmoke !important;
    display: inline-block;
}

.btt-index:hover,
.btt-index:active {
    background-color: whitesmoke !important;
    color: #343a40 !important;
    border: 2px solid #343a40 !important;
    text-decoration: none;
}

/* ------------------ Book Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* ------------------ Boostrap Toasts */
.custom-toast {
    overflow: visible;
}

.message-container {
    position: fixed;
    top: 65px;
    right: 15px;
    z-index: 9999;
    background-color: whitesmoke;
}

.message-txt {
    color: whitesmoke;
}

.bag-notification-wrapper {
    height: 120px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* ------------------ Allauth Forms */

.allauth-form-inner-content {
    margin-top: 1.5rem;
}

/* ------------------ Media Queries */


/* Media query for big devices */
@media only screen and (min-width: 950px) {
    body,
    .main-padding{
        padding-top: 170px !important;
        padding-bottom: 10px;
    }

    header,
    footer,
    small,
    p,
    h4 {
        font-size: large;
    }
}

/* Media query for medium devices */
@media only screen and (max-width: 950px) {
    body,
    .main-padding {
        padding-top: 57px !important;
    }
}

@media only screen and (min-width: 600px) {
    body,
    .main-padding {
        padding-top: 50px;
        padding-bottom: 20px;
    }
}

/* Media query for extra small devices */
@media only screen and (max-width: 600px) {
    .main-padding {
        padding-top: 100px !important;
    }

    header,
    footer,
    small,
    p,
    h4 {
        font-size: small;
    }

    .message-container {
        position: fixed;
        top: 65px;
        right: 15px;
        z-index: 9999;
        background-color: whitesmoke;
        width: 75%;
    }
}

